fixed scrollbar

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,3 +38,21 @@ $Online-Assessment-Tool-Frontend-theme: mat.define-theme((
 
 html, body { height: 100%; }
 body { margin: 0; padding: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+::-webkit-scrollbar {
+  width: 6px;
+  height: 4px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(45deg, #ccc, #999);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(45deg, #aaa, #777);
+}
